styles.css
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: white;
    display: flex;
    justify-content: center;
    /* align-items: center; */
}
.tipCalc{
    background-color: lightgray;
    padding:20px;
    border: 5px;
    /* width? border-radius*/
}
h1{
    font-weight: bold;
}
/* h2{} & label{} ? */
input[type="text"], input[type="range"] {
    width: 100%;
    padding: 10px;
    border: 1px; 
    border-color: black;

}
input[type="disabled"] {
    background-color: darkgray;
    }
/*#tipPercentage, #tipAmount #totalBill{
}
 limit input to 2 decimal places and add error message?*/

